--- a/index.html
+++ b/index.html
@@ -1,14 +1,242 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <script src="script.js"></script>
-             <link rel="stylesheet" href="style.css">
-    <title>FranBow_Wiki</title>
-</head>
-<body>
-    
-</body>
-</html>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&family=Mystery+Quest&display=swap"
+        rel="stylesheet">
 
+    <title>FranBow.Wiki</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <div class="logo">
+            <h1>FranBow Wiki</h1>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="#Inicio">Home</a></li>
+                <li><a href="#SobreMim">Sobre</a></li>
+                <li><a href="#Personagens">Personagens</a></li>
+                <li><a href="#Galeria">Galeria de imagens</a></li>
+            </ul>
+        </nav>
+        <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/fran1.png" alt="logo"
+            class="perfil-logo">
+
+    </header>
+    <main>
+        <article>
+            <h1><strong>História - Fran Bow</strong></h1>
+            <div class="centralizarVideo">
+                <iframe width="550px" height="300px" src="https://www.youtube.com/embed/cnfXW4JRLpc?si=NUQhc1Siuip5uYdA"
+                    frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="resumo">
+                <p> Fran Bow é um jogo indie de terror psicológico, point & click e aventura, desenvolvido e públicado
+                    em 17 de agosto de 2015 pelo estúdio sueco Killmonday Games, também conhecido pela obra "Little Miss
+                    Fortune".
+                    Disponível para windows, OS X, Linux, Android e iOS.
+                <p> O jogo nos conta a história de Fran Bow, uma jovem garota que luta contra um transtorno mental e um
+                    destino injusto.
+                    Depois de testemunhar a perda horrível e misteriosa de seus pais, encontrados esquartejados em sua
+                    casa, Fran corre para a floresta, junto com seu único e melhor amigo, o Sr. Meia-Noite, um gato
+                    preto que Fran havia recebido de presente de seus pais.
+                    Na floresta, Fran entra em choque com a perda de seus pais e, quando se recupera, está no Asilo
+                    Oswald, uma instituição mental opressiva para crianças, e o Sr. Meia-Noite não está com ela.
+                    Depois de ter um sonho com seu amado gato, Fran decide escapar do hospício para encontrá-lo e voltar
+                    para casa com tia Grace, sua única e <i>querida</i> parente viva.
+                </p>
+                </p>
+            </div>
+        </article>
+    </main>
+
+    <aside class="carrossel">
+        <div class="carrossel-container">
+            <button class="btn anterior">⟨</button>
+
+            <div class="slide" id="slide-fran">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/franBowResumo.jpg"
+                    alt="Fran Bow">
+                <div class="texto">
+                    <h2>Fran Bow</h2>
+                    <p>
+                        Protagonista da história, uma menina de 11 anos, doce e gentil que
+                        tem como companheiro seu melhor amigo Sr. Meia-Noite.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-meianoite">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/sr.meianoite.jpg"
+                    alt="Sr. Meia-Noite">
+                <div class="texto">
+                    <h2>Sr. Meia-Noite</h2>
+                    <p>
+                        O fiel gato preto de Fran e seu melhor amigo, disposto a ficar com ela e ajudar em qualquer
+                        situação, mesmo as arriscadas e mais difíceis.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-itward">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/Itward%20from%20Fran%20Bow.jfif"
+                    alt="Itward">
+                <div class="texto">
+                    <h2>Itward</h2>
+                    <p>
+                        Amigo de infância de Fran e companheiro, que desapareceu de sua mente por um tempo, mas Fran
+                        lentamente foi se relembrando. Itward afirma que sempre existiu e que, quando as crianças o
+                        "vêem", o fazem porque ele já existe e é imaginável.
+                        Ele parece ser uma espécie de protetor de crianças com doenças mentais (ou declaradas como
+                        doentes mentais) e foi visto por todos os pacientes do sanatório. É mencionado em um momento da
+                        história, que Itward é o "cinza" entre o "preto" e o "branco", entre o bem e o mau.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-grace">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/tia.grace.jpg"
+                    alt="Tia Grace">
+                <div class="texto">
+                    <h2>Grace Dagenhart</h2>
+                    <p>
+                        Tia <i>atenciosa</i> e <i>querida</i> de Fran, aparece no início do jogo em um jantar com Fran, e
+                        seus pais. No entanto, com o desenrolar da historia, é mostrado outra realidade, que Grace
+                        ajudou <span style="color:rgb(103, 0, 0);">Dr. Oswald Harrison</span> em seus experimentos
+                        grotescos no Sanatório Owsvald.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-deern">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/dr.deern.png"
+                    alt="Dr.Deern">
+                <div class="texto">
+                    <h2>Dr.Deern</h2>
+                    <p>
+                        Marcel Deern foi o psiquiatra de Fran enquanto ela estava no Sanatório Oswald. Mostrado como
+                        antagonisa involuntário, que apenas seguia as regras do seu trabalho, como foi dito por
+                        Palontras.
+                    </p>
+                </div>
+            </div>
+
+
+
+            <div class="slide" id="slide-remor">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/remor..jpg" alt="Remor">
+                <div class="texto">
+                    <h2>Remor</h2>
+                    <p>
+                        A entidade maligna que persegue Fran e representa seus medos mais
+                        profundos. É visto no início do jogo, na janela de Fran, durante a noite.
+                        Um monstro alto, com um crânio de bode no lugar da cabeça e o corpo todo preto, como se fosse
+                        uma sombra.
+                        Em um momento da história, é mencionado como Príncipe das Trevas pela <span
+                            style="color:rgb(103, 0, 0);">Mãe Mabuka</span>.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-mabuka">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/maemabuka.jpg"
+                    alt="Mãe Mabuka">
+                <div class="texto">
+                    <h2>Mãe Mabuka</h2>
+                    <p>
+                        Governante do quinto reino, é o "fim da luz", um ser das trevas que representa e subsiste da
+                        angústia e do desespero.
+                        É mãe de <span style="color:rgb(103, 0, 0);">Remor</span>.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-palon">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/palontras.jfif"
+                    alt="Palontras">
+                <div class="texto">
+                    <h2>Palontras</h2>
+                    <p>
+                        Palontras é o famoso médico da segunda realidade e um dos amigos de Fran. Ele foi criado
+                        pelos Grandes Valokas, nascido em uma ilha flutuante acima do centro da terra de Ithersta
+                        (segunda realidade), onde reside
+                        atualmente.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-ziar">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/King%20Ziar-%20Fran%20Bow.jpg"
+                    alt="King Ziar">
+                <div class="texto">
+                    <h2>Rei Ziar</h2>
+                    <p>
+                        O Rei Ziar é o Rei de Ithersta (representa a vida) ou segunda realidade, é uma terra repleta de
+                        vida e que maior parte dos habitantes, são vegetais, raízes e insetos em geral. Ele ajuda Fran
+                        Bow Dagenhart no Capítulo 3 quando ela se transforma em uma árvore.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-valo">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/valokas.png" alt="Valokas">
+                <div class="texto">
+                    <h2>Valokas</h2>
+                    <p>
+                        Os Valokas nascem na Primeira Realidade (chamada de Primeve, a
+                        realidade da luz, governada por seu rei, o
+                        Grande Valokas, é a realidade natal dos Valokas). Eles personificam o
+                        conceito humano de virtude e, como tal, são os opostos dos <span
+                            style="color:rgb(103, 0, 0);">Kamalas</span>.
+                        Os valokas tem aparencia "humanoide", e são brilhantes, feitos de luz.
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-kama">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/kamalas.jpg" alt="Kamalas">
+                <div class="texto">
+                    <h2>Kamalas</h2>
+                    <p>
+                        Os Kamalas são sombras que se alimentam de desespero e medo e aparecem o tempo todo durante o
+                        jogo. Tem origem na ultra-realidade (um lugar interdimensional localizado
+                        entre os Cinco Reinos da Existência Essencial ou cingo realidades, devido à sua proximidade com
+                        os Cinco Reinos, ele contém muitos elementos de todos eles ao mesmo tempo. Pode ser usado
+                        como um portal entre os reinos pelo mesmo motivo).
+                    </p>
+                </div>
+            </div>
+
+            <div class="slide" id="slide-sanat">
+                <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/sanatorio.png"
+                    alt="Sanatório">
+                <div class="texto">
+                    <h2>Sanatório Oswald</h2>
+                    <p>
+                        O Asilo Oswald é uma instituição de saúde mental especializada em crianças com traumas graves.
+                        Fundado pelo <span style="color:rgb(103, 0, 0);">Dr. Oswald Harrison</span>, um renomado
+                        psiquiatra.
+                        É o lugar onde Fran se encontra depois das cutcenes iniciais do jogo.
+                    </p>
+                </div>
+            </div>
+
+            <button class="btn proximo">⟩</button>
+        </div>
+    </aside>
+
+    <footer>
+
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
