--- a/index.html
+++ b/index.html
@@ -6,71 +6,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&family=Mystery+Quest&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Emilys+Candy&family=Modern+Antiqua&family=Mystery+Quest&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
 
-    <title>FranBow.Wiki</title>
+    <title>FranBow.Info</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <h1>FranBow Wiki</h1>
+            <h1>FranBow Info</h1>
         </div>
         <nav>
             <ul class="menu">
-                <li><a href="#Inicio">Home</a></li>
-                <li><a href="#SobreMim">Sobre</a></li>
-                <li><a href="#Personagens">Personagens</a></li>
-                <li><a href="#Galeria">Galeria de imagens</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="personagens.html">Personagens</a></li>
+
             </ul>
         </nav>
+        <a href="https://killmondaygames.com/fran-bow/" target="_blank">
         <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/fran1.png" alt="logo"
-            class="perfil-logo">
+            class="perfil-logo"> </a>
 
     </header>
-    <main>
-        <article>
-            <h1><strong>História - Fran Bow</strong></h1>
-            <div class="centralizarVideo">
-                <iframe width="550px" height="300px" src="https://www.youtube.com/embed/cnfXW4JRLpc?si=NUQhc1Siuip5uYdA"
-                    frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="resumo">
-                <p> Fran Bow é um jogo indie de terror psicológico, point & click e aventura, desenvolvido e públicado
-                    em 17 de agosto de 2015 pelo estúdio sueco Killmonday Games, também conhecido pela obra "Little Miss
-                    Fortune".
-                    Disponível para windows, OS X, Linux, Android e iOS.
-                <p> O jogo nos conta a história de Fran Bow, uma jovem garota que luta contra um transtorno mental e um
-                    destino injusto.
-                    Depois de testemunhar a perda horrível e misteriosa de seus pais, encontrados esquartejados em sua
-                    casa, Fran corre para a floresta, junto com seu único e melhor amigo, o Sr. Meia-Noite, um gato
-                    preto que Fran havia recebido de presente de seus pais.
-                    Na floresta, Fran entra em choque com a perda de seus pais e, quando se recupera, está no Asilo
-                    Oswald, uma instituição mental opressiva para crianças, e o Sr. Meia-Noite não está com ela.
-                    Depois de ter um sonho com seu amado gato, Fran decide escapar do hospício para encontrá-lo e voltar
-                    para casa com tia Grace, sua única e <i>querida</i> parente viva.
-                </p>
-                </p>
-            </div>
-        </article>
-    </main>
 
-    <aside>
-        <h1>Qual o objetivo dessse site?</h1>
-        <p>Criei esse site para fans e curiosos sobre o jogo Indie Fran Bow, com informações dos principais personagens
-            e um resumo da história.
-            Fran Bow é um dos meus jogos favoritos (se não, o primeiro). Descobri esse jogo perfeito em um video do
-            canal do Alanzoka, lá em 2016, lembro que fiquei obcecada. Sempre reassisto a série Fran Bow do canal do
-            Alan.
-            Comentando sobre a história e o estilo do jogo, não a nada a reclamar, SIMPLISMENTE PERFEITO!! A história
-            desde o inicio é cativante, prende você faz com que continue o jogo para entender mais sobre ela. o estilo
-            do jogo é maravilhoso, é grotesco, lindo e "fofo" ao mesmo tempo, sem falar que é mágico.</p>
-    </aside>
+    <div class="content-wrapper">
+        <main>
+            <article>
+                <h1>História - Fran Bow</h1>
+                <div class="centralizarVideo">
+                    <iframe width="550px" height="300px"
+                        src="https://www.youtube-nocookie.com/embed/cnfXW4JRLpc?si=NUQhc1Siuip5uYdA" frameborder="0"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="resumo">
+                    <p> Fran Bow é um jogo indie de terror psicológico, point & click e aventura, desenvolvido e
+                        públicado
+                        em 17 de agosto de 2015 pelo estúdio sueco Killmonday Games, também conhecido pela obra "Little
+                        Miss
+                        Fortune".
+                        Disponível para windows, OS X, Linux, Android e iOS.
+                    <p> O jogo nos conta a história de Fran Bow, uma jovem garota que luta contra um transtorno mental e
+                        um
+                        destino injusto.
+                        Depois de testemunhar a perda horrível e misteriosa de seus pais, encontrados esquartejados em
+                        sua
+                        casa, Fran corre para a floresta, junto com seu único e melhor amigo, o Sr. Meia-Noite, um gato
+                        preto que Fran havia recebido de presente de seus pais.
+                        Na floresta, Fran entra em choque com a perda de seus pais e, quando se recupera, está no Asilo
+                        Oswald, uma instituição mental opressiva para crianças, e o Sr. Meia-Noite não está com ela.
+                        Depois de ter um sonho com seu amado gato, Fran decide escapar do hospício para encontrá-lo e
+                        voltar
+                        para casa com tia Grace, sua única e <i>querida</i> parente viva.
+                    </p>
+                    </p>
+                </div>
+            </article>
+        </main>
+
+        <aside>
+            <h1>Por que criei esse site?</h1>
+            <p>Criei esse site para <span class="sublinhado">fans</span> e <span class="sublinhado">curiosos</span>
+                sobre o
+                jogo Indie Fran Bow, com informações dos principais personagens
+                e um resumo da história para que possam entender mais um pouco sobre cada personagem e quem ele é. </p>
+            <p>
+                Fran Bow> é um dos meus jogos favoritos (se não, o primeiro). Descobri esse jogo perfeito em um video do
+                canal do Alanzoka, lá em 2016, lembro que fiquei obcecada. Sempre reassisto a série Fran Bow do canal do
+                Alan.
+                Comentando sobre a história e o estilo do jogo, não a nada a reclamar, SIMPLISMENTE PERFEITO!! A
+                história
+                desde o inicio é cativante, prende você faz com que continue o jogo para entender mais sobre ela. o
+                estilo
+                do jogo é maravilhoso, é grotesco, lindo e "fofo" ao mesmo tempo, sem falar que é mágico.</p>
+
+            <img src="https://raw.githubusercontent.com/juliaak10/projetoDeFrontEnd/main/franart.jpg"
+                alt="fanart Fran Bow" class="art">
+        </aside>
+    </div>
 
     <footer>
-
+        <p>
+    créditos para <a href="https://killmondaygames.com/" target="_blank" class="footer-link">Killmonday Games©</a>.
+  </p>
     </footer>
 
     <script src="script.js"></script>
